--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,83 @@ body {
   font-family: "GeneralSans-Variable", sans-serif;
 }
 
+header { 
+  display: flex;
+  justify-content: space-around;
+}
+
+nav { 
+  display: flex;
+  align-items:center;
+  justify-content: center;
+}
+
+ul { 
+  display: flex;
+  list-style: none;
+  cursor: pointer;
+}
+
+ul li { 
+  padding: 20px;
+}
+
+ul li::after { 
+  display: block;
+  content: "";
+  width: 0%;
+  border-top: 1px solid white;
+  transition: 0.3s width ease-out;
+}
+
+ul li:hover::after { 
+  width: 100%;
+
+}
+
+li a { 
+  text-decoration: none;
+  color: white;
+  font-size: 13px;
+  font-weight: 500;
+}
+
+.buttons { 
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.buttons .sign-in { 
+  border: 0;
+  outline: 1px solid rgba(255 , 255 ,255 , 0.3) ;
+  background-color: black;
+  color: white;
+  padding: 6px 15px;
+  border-radius: 40px;
+  font-weight: 500;
+  font-size: 15px;
+  text-decoration: none;
+}
+
+.buttons .sign-in:hover { 
+  background-color: rgba(255 , 255 ,255 , 0.1);
+}
+
+.buttons .download { 
+  background-color: white;
+  color: black;
+  border-radius: 20px;
+  padding: 6px 10px;
+  font-size: 14px;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.buttons .download:hover { 
+  background-color: #ededec; 
+}
+
 
 
 
